--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,15 @@
     <!-- 学历 -->
     <div class="Education">
         <div class="color">
-            <div class="action"></div>
+            <div class="action">
+                <ul class="slideshow">
+                    <li><a href="javascript:;"></a></li>
+                    <li><a href="javascript:;"></a></li>
+                    <li><a href="javascript:;"></a></li>
+                    <li><a href="javascript:;"></a></li>
+                    <li><a href="javascript:;"></a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <!-- 间隔 -->
